--- a/src/components/business/Sidebar/Sidebar.css
+++ b/src/components/business/Sidebar/Sidebar.css
@@ -55,6 +55,21 @@
   color: var(--color-text);
 }
 
+.sidebar__menu-button:focus-visible {
+  outline: 2px solid var(--color-border-hover);
+  outline-offset: 2px;
+}
+
+.sidebar__menu-button:disabled {
+  opacity: 0.5;
+  cursor: not-allowed;
+}
+
+.sidebar__menu-button:disabled:hover {
+  background-color: transparent;
+  color: var(--color-text-secondary);
+}
+
 
 .sidebar__resize-handle {
   position: absolute;
@@ -64,6 +79,15 @@
   height: 100%;
   cursor: col-resize;
   z-index: 10;
+}
+
+.sidebar__resize-handle:focus-visible {
+  outline: 2px solid var(--color-border-hover);
+  outline-offset: 2px;
+}
+
+.sidebar__resize-handle:focus-visible::after {
+  background-color: var(--color-border-hover);
 }
 
 .sidebar__resize-handle::after {
