Fix working scroll and prevent flex shrink

--- a/src/components/business/ChatMessageList/ChatMessageList.css
+++ b/src/components/business/ChatMessageList/ChatMessageList.css
@@ -8,6 +8,10 @@
   min-height: 0;
 }
 
+.chat-message-list > * {
+  flex-shrink: 0;
+}
+
 .chat-message-list__empty {
   display: flex;
   align-items: center;
