--- a/src/components/business/ChatContainer/ChatContainer.css
+++ b/src/components/business/ChatContainer/ChatContainer.css
@@ -23,9 +23,7 @@
   transition: margin-left 0.2s ease;
 }
 
-.chat-container__sidebar--hidden {
-  /* margin-left 由内联样式动态设置，基于实际 sidebar 宽度 */
-}
+/* .chat-container__sidebar--hidden: margin-left 由内联样式动态设置，基于实际 sidebar 宽度 */
 
 .chat-container__main {
   flex: 1;
@@ -46,7 +44,7 @@
   position: absolute;
   top: 11px;
   left: 80px;
-  z-index: 101;
+  z-index: 1000;
 }
 
 .chat-container__messages {
